deployment/grafana/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-grafana
  labels:
    app: gateway-grafana
    version: 1.0.0-alpha
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-grafana
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 1
  template:
    metadata:
      labels:
        app: gateway-grafana
    spec:
      containers:
        - name: gateway
          image: grafana/grafana:7.0.3-ubuntu
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          ports:
            - name: default
              containerPort: 3000
