deployment/grafana/service.yml
apiVersion: v1
kind: Service
metadata:
  name: gateway-grafana
spec:
  selector:
    app: gateway-grafana
  ports:
    - name: default
      port: 3000
      targetPort: 3000
  type: LoadBalancer
