deployment/grafana/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
spec:
  rules:
    - host: grafana.gateway.info
      http:
        paths:
          - path: /
            backend:
              serviceName: gateway-grafana
              servicePort: 3000
